# MYMQ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CHANGELOG.md  CMakeLists.txt
client/config/: business.ini  communication.ini  sys.ini
client/examples/: CMakeLists.txt  example_test_perf.cpp  example_test_seek.cpp  main.cpp  test_common_header.cpp  test_common_header.h
client/include/: MYMQ_C.h  MYMQ_PublicCodes.h
client/src/: Communication.h  Config_manager.h  MYMQ_C.cpp  MYMQ_Client.cpp  MYMQ_Client.h  MYMQ_innercodes.h  MurmurHash2.h  Request_timeout_queue.h  Serialize.h  ThreadPool.h  Timer.h  base64.h  version.h.in
config/: communication.ini  communication.propertity  system.properity
docs/: API_Guide.md  API_Guide_EN.md
examples/: CMakeLists.txt
include/: MYMQ_C.h  MYMQ_PublicCodes.h
server/: CMakeLists.txt  MYMQ_Server_ns.h  main.cpp
server/config/: storage.properity
server/include/: MYMQ_Publiccodes.h  MYMQ_S.h  MYMQ_Server_ns.h  MYMQ_innercodes.h
server/src/: CHANGELOG.md  Logsegment.h  MYMQ_S.cpp  MessageQueue.h  Mmapfile.h  MurmurHash2.h  Printqueue.h  Serialize.h  Server.h  SharedThreadPool.h  Skiplist.h  ThreadPool.h  version.h.in
src/: Communication.h  MYMQ_C.cpp  MYMQ_Client.cpp  MYMQ_innercodes.h  ThreadPool.h
